[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "library"
version = "0.1.0"
description = "Your library description"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/library"
Documentation = "https://library.readthedocs.io/en/latest/"
Bug Tracker = "https://github.com/yourusername/library/issues"

[tool.setuptools]
packages = ["library"]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
